Дополняет верстку адаптивны сеток

--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -33,6 +33,7 @@ $icon-color:#666666;
 $icon-color-hover:#68b738;
 $icon-color-active:rgba(#68b738, 0.3);
 
+$input-border: #cdcdcd;
 
 // $basic-green: #68b738;
 // $basic-grey: #f2f2f2;
