--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -46,6 +46,10 @@
 
   @media (min-width: 768px) {
     text-align: right;
+
+    & + & {
+      margin-top: 19px;
+    }
   }
 
   @media (min-width: 1440px) {
