--- a/source/styles/blocks/input.scss
+++ b/source/styles/blocks/input.scss
@@ -1,9 +1,11 @@
 .input {
+  padding: 13px;
   font-family: inherit;
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
   color: $input-color;
+  border: 1px solid $input-border;
   text-transform: uppercase;
 
   &:placeholder-shown {
