Добавляет переменную для брейкпойнтов. Добавляет адаптивные сеткина страницу каталога

--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -30,11 +30,11 @@
     @include icon(78px,81px,"gift");
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     text-align: left;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop-width) {
     text-align: center;
   }
 }
