--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -10,13 +10,13 @@ $hero-bg-secondary-color: rgba($bg-secondary-color, 0.85);
   color: $text-with-bg-color;
   text-align: center;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     color: $text-color;
     text-align: left;
     background: $bg-basic-color;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop-width) {
     background:
       linear-gradient(
         to left,
@@ -38,7 +38,7 @@ $hero-bg-secondary-color: rgba($bg-secondary-color, 0.85);
   text-transform: uppercase;
   color: inherit;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 20px;
   }
 }
