--- a/source/styles/blocks/section-title.scss
+++ b/source/styles/blocks/section-title.scss
@@ -3,7 +3,7 @@
   font-weight: 400;
   line-height: 1em;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 60px;
   }
 }
