--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -24,7 +24,7 @@
     color: $button-color-active;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 26px;
   }
