--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,3 +1,4 @@
+$catalog-separator-color:#ebebeb;
 // .catalog {
 // }
 
@@ -5,7 +6,22 @@
   @include list();
   display: flex;
   flex-wrap: wrap;
+
+  @media (min-width: $tablet-width) {
+    gap: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 80px 63px;
+  }
+  border-collapse: collapse;
 }
 
-// .catalog__item {
-// }
+.catalog__item {
+  border-top: 1px solid $catalog-separator-color;
+  border-bottom: 1px solid $catalog-separator-color;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
+}
