--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: $bg-primary-color;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     padding: 55px 0;
     grid-template-columns: repeat(3, auto);
   }
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: center;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     justify-content: start;
   }
 }
@@ -56,7 +56,7 @@
     }
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     justify-content: end;
   }
 }
