--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -2,7 +2,7 @@
   color: $text-color;
   background-color: $bg-basic-color;
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop-width) {
     color: $text-with-bg-color;
     background-color: $bg-secondary-color;
   }
@@ -26,7 +26,7 @@
     opacity: 0.3;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     display: none;
   }
 }
@@ -41,7 +41,7 @@
   flex-direction: column;
   align-items: center;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     flex-direction: row;
   }
 }
@@ -71,12 +71,12 @@
     opacity: 0.3;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 18px;
     line-height: 24px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop-width) {
     font-size: 20px;
     line-height: 30px;
   }
