--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -8,7 +8,7 @@
   text-transform: uppercase;
   color: $card-title-color;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 20px;
   }
 }
@@ -20,12 +20,12 @@
   line-height: 1em;
   color: $text-secondary-color;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
   }
 
-  // @media (min-width: 1440px) {
+  // @media (min-width: $desktop-width) {
   //   text-align: right;
   // }
 }
@@ -38,12 +38,12 @@
   // text-align: right;
   color: $text-secondary-color;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
   }
 
-  // @media (min-width: 1440px) {
+  // @media (min-width: $desktop-width) {
   //   text-align: left;
   // }
 }
