--- a/source/styles/blocks/section-subtitle.scss
+++ b/source/styles/blocks/section-subtitle.scss
@@ -3,11 +3,11 @@
   font-weight: 400;
   line-height: 1em;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 32px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop-width) {
     font-size: 40px;
   }
 }
