--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -15,7 +15,7 @@
   line-height: 18px;
   text-align: left;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 1.5em;
   }
