--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -7,7 +7,7 @@
 //   }
 // }
 
-.contaсts__inner-wrap {
+.contacts__inner-wrap {
   padding: 26px 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
