--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -1,18 +1,37 @@
 .compare-slider {
+  width: 280px;
+  height: 256px;
   display: grid;
+  justify-items: center;
+
+  & picture {
+    display: contents;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 560px;
+    height: 512px;
+  }
 }
 
-// .compare-slider__image {
-// }
-
-.compare-slider__image--before {
+.compare-slider__image {
   grid-column: 1/-1;
   grid-row: 1/-1;
+  background-color: $bg-primary-color;
+  height: 100%;
+
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.compare-slider__image--before {
+  object-position: left;
+  justify-self: start;
 }
 
 .compare-slider__image--after {
-  grid-column: 1/-1;
-  grid-row: 1/-1;
+  object-position: right;
+  justify-self: end;
 }
 
 .compare-slider__control {
@@ -21,18 +40,44 @@
 }
 
 .compare-slider__control-button {
+  grid-column: 1/-1;
+  grid-row: 1/-1;
   --color: #{$icon-color};
   display: block;
   padding: 0;
   color: var(--color);
-  background-color: #ffffff;
-  border: 2px solid var(--color);
-  border-radius: 100%;
+  background-color: var(--color);
+  border: none;
+  border-radius: 2px;
+  width: 4px;
+  position: relative;
+  cursor: pointer;
+
+  &::after {
+    // @include icon-mask(40px,40px,"slider-control");
+    // mask-size: 24px 18px;
+    @include icon-mask(24px,18px,"slider-control");
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--color);
+    cursor: pointer;
+  }
 
   &::before {
-    @include icon-mask(40px,40px,"slider-control");
-    mask-size: 24px 18px;
-    background-color: var(--color);
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: $bg-basic-color;
+    border: 2px solid var(--color);
+    border-radius: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
   }
 
   &:hover {
