--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -20,11 +20,26 @@
 }
 
 .category__item {
+  display: grid;
+  grid-template-columns: 70px 1fr;
+  gap: 22px 0;
   padding: 21px 20px 18px;
   background-color: $bg-primary-color;
+  align-items: center;
+
+  @media (min-width: $tablet-width) and (max-width: calc($desktop-width - 1px)) {
+    &::before {
+      grid-column: 2/3;
+      grid-row: 1/-1;
+      justify-self: end;
+    }
+  }
 
   @media (min-width: $tablet-width) {
+    grid-template-columns: 1fr 240px;
+    grid-template-rows: repeat(3, auto);
     padding: 77px 63px 53px 52px;
+    gap: 24px 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -61,6 +76,8 @@
 }
 
 .category__title {
+  align-self: center;
+  margin: 0;
   font-size: 24px;
   font-weight: 400;
   line-height: 37px;
@@ -74,7 +91,13 @@
 
 .category__desc {
   @include text();
+  grid-column: 1/-1;
+  margin: 0;
   color: $text-secondary-color;
+
+  @media (min-width: $tablet-width) and (max-width: calc($desktop-width - 1px)) {
+    grid-area: unset;
+  }
 
   @media (min-width: $tablet-width) {
     color: $text-color;
@@ -82,14 +105,18 @@
 }
 
 .category__link {
+  grid-column: 1/-1;
+  padding-top: 19px;
   display: flex;
   align-items: center;
   gap: 15px;
   font-size: 16px;
   line-height: 1em;
   text-transform: uppercase;
-  color: inherit;
   text-decoration: none;
+  color: inherit;
+  border-top: 1px solid $separator-color;
+  transition: background-position-x 0.5s;
 
   &::after {
     @include icon(32px, 12px, "arrow", -8px, center);
@@ -108,9 +135,15 @@
     }
   }
 
+  @media (min-width: $tablet-width) and (max-width: calc($desktop-width - 1px)) {
+    grid-area: unset;
+    justify-self: start;
+  }
+
   @media (min-width: $tablet-width) {
     gap: 25px;
     font-size: 20px;
     line-height: 1.5em;
+    border: none;
   }
 }
