Добавляет клас и миксин контейнера

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -28,3 +28,4 @@
 @import "./blocks/catalog-extra.scss";
 @import "./blocks/product.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/container.scss";
