--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -61,3 +61,17 @@
 @mixin icon-mask-image($id) {
   mask-image: url("../../icons/stack.svg#"+$id);
 }
+
+@mixin container() {
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (min-width: $tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+  }
+}
