--- a/source/styles/blocks/container.scss
+++ b/source/styles/blocks/container.scss
@@ -1,13 +1,13 @@
 .container {
-  width: 280px;
+  width: $max-width-mobile;
   margin-left: auto;
   margin-right: auto;
 
   @media (min-width: $tablet-width) {
-    width: 708px;
+    width: $max-width-tablet;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1220px;
+    width: $max-width-desktop;
   }
 }
