--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -3,6 +3,10 @@
 
 .features__title {
   line-height: 40px;
+
+  @media (min-width: $tablet-width) {
+    line-height: 1em;
+  }
 }
 
 .features__list {
@@ -19,7 +23,7 @@
 .features__item {
   @include text();
   display: flex;
-  flex-flow: row wrap;
+  // flex-flow: row wrap;
   gap: 20px;
   align-items: center;
   color: $text-secondary-color;
