--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -12,10 +12,10 @@
 @import "./blocks/section-subtitle.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/page.scss";
+@import "./blocks/index-header.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/main-container.scss";
-@import "./blocks/hero.scss";
 @import "./blocks/category.scss";
 @import "./blocks/features.scss";
 @import "./blocks/live-example.scss";
