Исправляет мелкие ошибки

--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -25,6 +25,10 @@
   padding: 13px 0 15px;
   // grid-column: 2/3;
 
+  width: $max-width-mobile;
+  margin-left: auto;
+  margin-right: auto;
+
   &:hover,
   &:focus {
     opacity: 0.8;
@@ -35,6 +39,7 @@
   }
 
   @media (min-width: $tablet-width) {
+    width: unset;
   }
 }
 
@@ -99,6 +104,6 @@
   }
 }
 
-.index-header__hero {
-  // grid-column: 1/-1;
-}
+// .index-header__hero {
+//   // grid-column: 1/-1;
+// }
