--- a/source/styles/blocks/index-header.scss
+++ b/source/styles/blocks/index-header.scss
@@ -54,11 +54,13 @@ $hero-bg-secondary-color: rgba($bg-secondary-color, 0.85);
 }
 
 .index-header__hero-title {
+  padding: 25px 0;
   line-height: 1em;
   color: inherit;
 }
 
 .index-header__hero-desc {
+  padding-bottom: 29px;
   font-size: 14px;
   font-weight: 400;
   line-height: 1em;
@@ -71,6 +73,7 @@ $hero-bg-secondary-color: rgba($bg-secondary-color, 0.85);
 }
 
 .index-header__hero-image {
+  padding-bottom: 3px;
   grid-column: 2/3;
   grid-row: 3/5;
 }
