Обнуляет отсупы у заголовков

--- a/source/styles/blocks/index-header.scss
+++ b/source/styles/blocks/index-header.scss
@@ -54,6 +54,7 @@ $hero-bg-secondary-color: rgba($bg-secondary-color, 0.85);
 }
 
 .index-header__hero-title {
+  margin: 0;
   padding: 25px 0;
   line-height: 1em;
   color: inherit;
