--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -41,9 +41,9 @@ $input-border: #cdcdcd;
 $separator-color:#d9d9d9;
 $separator-border: 1px solid $separator-color;
 
-$max-width-mobile: 280px;
-$max-width-tablet: 708px;
-$max-width-desktop: 1220px;
+$content-width-mobile: 280px;
+$content-width-tablet: 708px;
+$content-width-desktop: 1220px;
 
 // $basic-green: #68b738;
 // $basic-grey: #f2f2f2;
