--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -64,7 +64,7 @@
     display: block;
     width: 40px;
     height: 40px;
-    background-color: $bg-basic-color;
+    background-color: $button-color;
     border: 2px solid var(--color);
     border-radius: 100%;
     position: absolute;
