--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   // display: grid;
-  // grid-template-columns: 1fr $max-width-mobile 1fr;
+  // grid-template-columns: 1fr $content-width-mobile 1fr;
   // grid-template-rows: auto auto auto;
 
   // @media (min-width: $tablet-width) {
-  //   grid-template-columns: 1fr $max-width-tablet 1fr;
+  //   grid-template-columns: 1fr $content-width-tablet 1fr;
   // }
 }
 
@@ -25,7 +25,7 @@
   padding: 13px 0 15px;
   // grid-column: 2/3;
 
-  width: $max-width-mobile;
+  width: $content-width-mobile;
   margin-left: auto;
   margin-right: auto;
 
@@ -40,17 +40,27 @@
 
   @media (min-width: $tablet-width) {
     width: unset;
+    margin: 0;
   }
 }
 
 .main-header__nav {
   width: 100%;
   flex-shrink: 0;
+  align-self: center;
   // grid-column: 1/-1;
 
   @media (min-width: $tablet-width) {
+    flex-shrink: 1;
+    max-width: 500px;
+    width: unset;
     margin-left: auto;
-    grid-column: unset;
+    margin-right: -10px;
+    // grid-column: unset;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 50%;
   }
 }
 
@@ -99,7 +109,7 @@
 
 .main-header__nav-link {
   @media (max-width: ($tablet-width - 1)) {
-    max-width: $max-width-mobile;
+    max-width: $content-width-mobile;
     margin: 0 auto;
   }
 }
