--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -8,20 +8,33 @@ $catalog-separator-color:#ebebeb;
   flex-wrap: wrap;
 
   @media (min-width: $tablet-width) {
+    max-width: $content-width-tablet;
+    margin-inline: auto;
     gap: 60px;
   }
 
   @media (min-width: $desktop-width) {
+    max-width: $content-width-desktop;
     gap: 80px 63px;
   }
   border-collapse: collapse;
 }
 
 .catalog__item {
+  width: 100%;
+  display: flex;
+  justify-content: center;
   border-top: 1px solid $catalog-separator-color;
   border-bottom: 1px solid $catalog-separator-color;
 
   @media (min-width: $tablet-width) {
+    width: unset;
     border: none;
+  }
+}
+
+.catalog__item--more {
+  @media (min-width: $tablet-width) {
+    padding-top: 81px;
   }
 }
