--- a/source/styles/blocks/main-container.scss
+++ b/source/styles/blocks/main-container.scss
@@ -2,5 +2,13 @@
 // }
 
 .main-container__title {
-  margin: 0;
+  margin: 27px 0 41px;
+
+  @media (min-width: $tablet-width) {
+    margin: 65px 0 85px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 75px 0 85px;
+  }
 }
