--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -8,7 +8,7 @@
 
 .contacts__inner-wrap {
   @include container;
-  margin: 0;
+  margin: 0 auto;
   padding: 26px 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -18,12 +18,13 @@
   background-color: $bg-basic-color;
 
   @media (min-width: $tablet-width) {
-    padding: 61px 40px;
+    padding: 60px 40px;
   }
 
   @media (min-width: $desktop-width) {
     width: 565px;
     padding-inline: 80px;
+    margin-inline: unset;
     grid-column: 2/3;
     grid-row: 2/3;
   }
@@ -65,7 +66,14 @@
   grid-column: 1/-1;
   grid-row: 1/-1;
   z-index: -1;
+  height: 362px;
+
+  @media (min-width: $tablet-width) {
+    min-height: 400px;
+  }
 }
 
-// .contacts__map-image {
-// }
+.contacts__map-image {
+  display: block;
+  margin-inline: auto;
+}
