--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,7 +1,24 @@
-// .product {
-// }
+.product {
+  display: grid;
+  grid-template-areas: "title title", "count price", "button button";
+  gap: 15px;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: auto auto 25px;
+    grid-template-areas: "title count price", "button button button";
+    gap: 25px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr auto 245px;
+    grid-template-areas: "title count price button";
+    gap: 40px;
+  }
+}
 
 .product__title {
+  grid-area: title;
   margin: 0;
   font-size: 16px;
   font-weight: 400;
@@ -15,6 +32,7 @@
 }
 
 .product__count {
+  grid-area: count;
   font-family: $font-secondary;
   font-size: 14px;
   font-weight: 400;
@@ -32,6 +50,7 @@
 }
 
 .product__price {
+  grid-area: price;
   font-family: $font-secondary;
   font-size: 14px;
   font-weight: 400;
@@ -49,5 +68,6 @@
   // }
 }
 
-// .product__button {
-// }
+.product__button {
+  grid-area: button;
+}
