--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -5,6 +5,8 @@
 // }
 
 .subscribe__desc {
+  margin: 0;
+  padding: 24px 10px;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -13,16 +15,32 @@
   @media (min-width: $tablet-width) {
     font-size: 24px;
     line-height: 32px;
+    padding-inline: 40px;
   }
 }
 
-// .subscribe__form {
-// }
+.subscribe__form {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 16px 0;
+  justify-content: center;
 
-// .subscribe__form-input {
-// }
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+  }
+}
+
+.subscribe__form-input {
+  @media (min-width: $tablet-width) {
+    min-width: 376px;
+  }
+}
 
 .subscribe__form-button {
   font-size: 20px;
   line-height: 26px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 256px;
+  }
 }
